[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candl"
version = "0.0.1"
authors = [
  { name="Lennart Balkenhol", email="lbalkenhol@iap.fr" },
]
description = "Differentiable Likelihood for CMB Analysis"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
