[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "candl"
authors = [
  { name="us", email="us@example.com" },
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
"pyyaml >= 6.0",
"numpy >= 1.23.5",
"scipy >= 1.10.1",
"sigfig >= 1.3.2",
"tqdm >= 4.65.0",
"matplotlib >= 3.7.1",
"seaborn >= 0.12.2"
]

[project.urls]
Homepage = "https://github.com/Lbalkenhol/candl"